// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Avatar renders with colorScheme 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  background-color: #c2c2c2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 14px;
  font-size: 14px;
  height: 14px;
}

.emotion-3 {
  vertical-align: middle;
}

.emotion-5 {
  background-color: #007a41;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

.emotion-9 {
  background-color: #123321;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <svg
            class="emotion-3"
            color="currentColor"
            height="14px"
            viewBox="0 0 16 16"
            width="14px"
          >
            <title>
              PersonIcon
            </title>
            <path
              d="M8 8a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm2.667-4a2.667 2.667 0 1 1-5.334 0 2.667 2.667 0 0 1 5.334 0zM16 14.667C16 16 14.667 16 14.667 16H1.333S0 16 0 14.667c0-1.334 1.333-5.334 8-5.334s8 4 8 5.334zm-1.333-.006c-.002-.328-.206-1.314-1.11-2.218-.869-.87-2.505-1.776-5.557-1.776-3.053 0-4.688.906-5.557 1.776-.904.904-1.107 1.89-1.11 2.218h13.334z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-2"
        >
          <svg
            class="emotion-3"
            color="currentColor"
            height="14px"
            viewBox="0 0 16 16"
            width="14px"
          >
            <title>
              PersonIcon
            </title>
            <path
              d="M8 8a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm2.667-4a2.667 2.667 0 1 1-5.334 0 2.667 2.667 0 0 1 5.334 0zM16 14.667C16 16 14.667 16 14.667 16H1.333S0 16 0 14.667c0-1.334 1.333-5.334 8-5.334s8 4 8 5.334zm-1.333-.006c-.002-.328-.206-1.314-1.11-2.218-.869-.87-2.505-1.776-5.557-1.776-3.053 0-4.688.906-5.557 1.776-.904.904-1.107 1.89-1.11 2.218h13.334z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-2"
        >
          <svg
            class="emotion-3"
            color="currentColor"
            height="14px"
            viewBox="0 0 16 16"
            width="14px"
          >
            <title>
              PersonIcon
            </title>
            <path
              d="M8 8a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm2.667-4a2.667 2.667 0 1 1-5.334 0 2.667 2.667 0 0 1 5.334 0zM16 14.667C16 16 14.667 16 14.667 16H1.333S0 16 0 14.667c0-1.334 1.333-5.334 8-5.334s8 4 8 5.334zm-1.333-.006c-.002-.328-.206-1.314-1.11-2.218-.869-.87-2.505-1.776-5.557-1.776-3.053 0-4.688.906-5.557 1.776-.904.904-1.107 1.89-1.11 2.218h13.334z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar Avatar renders with icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  background-color: #c2c2c2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 14px;
  font-size: 14px;
  height: 14px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar Avatar renders with shape 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  background-color: #c2c2c2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 14px;
  font-size: 14px;
  height: 14px;
}

.emotion-3 {
  vertical-align: middle;
}

.emotion-5 {
  background-color: #c2c2c2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 4px;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <svg
            class="emotion-3"
            color="currentColor"
            height="14px"
            viewBox="0 0 16 16"
            width="14px"
          >
            <title>
              PersonIcon
            </title>
            <path
              d="M8 8a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm2.667-4a2.667 2.667 0 1 1-5.334 0 2.667 2.667 0 0 1 5.334 0zM16 14.667C16 16 14.667 16 14.667 16H1.333S0 16 0 14.667c0-1.334 1.333-5.334 8-5.334s8 4 8 5.334zm-1.333-.006c-.002-.328-.206-1.314-1.11-2.218-.869-.87-2.505-1.776-5.557-1.776-3.053 0-4.688.906-5.557 1.776-.904.904-1.107 1.89-1.11 2.218h13.334z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-2"
        >
          <svg
            class="emotion-3"
            color="currentColor"
            height="14px"
            viewBox="0 0 16 16"
            width="14px"
          >
            <title>
              PersonIcon
            </title>
            <path
              d="M8 8a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm2.667-4a2.667 2.667 0 1 1-5.334 0 2.667 2.667 0 0 1 5.334 0zM16 14.667C16 16 14.667 16 14.667 16H1.333S0 16 0 14.667c0-1.334 1.333-5.334 8-5.334s8 4 8 5.334zm-1.333-.006c-.002-.328-.206-1.314-1.11-2.218-.869-.87-2.505-1.776-5.557-1.776-3.053 0-4.688.906-5.557 1.776-.904.904-1.107 1.89-1.11 2.218h13.334z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar Avatar renders with size 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  background-color: #c2c2c2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 14px;
  font-size: 14px;
  height: 14px;
}

.emotion-3 {
  vertical-align: middle;
}

.emotion-5 {
  background-color: #c2c2c2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 40px;
  height: 40px;
  font-size: 14px;
  line-height: 22px;
  border-radius: 50%;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 18px;
  font-size: 18px;
  height: 18px;
}

.emotion-9 {
  background-color: #c2c2c2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  word-wrap: break-word;
  white-space: nowrap;
  color: #fff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4px;
  width: 64px;
  height: 64px;
  font-size: 24px;
  line-height: 32px;
  border-radius: 50%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 28px;
  font-size: 28px;
  height: 28px;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <svg
            class="emotion-3"
            color="currentColor"
            height="14px"
            viewBox="0 0 16 16"
            width="14px"
          >
            <title>
              PersonIcon
            </title>
            <path
              d="M8 8a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm2.667-4a2.667 2.667 0 1 1-5.334 0 2.667 2.667 0 0 1 5.334 0zM16 14.667C16 16 14.667 16 14.667 16H1.333S0 16 0 14.667c0-1.334 1.333-5.334 8-5.334s8 4 8 5.334zm-1.333-.006c-.002-.328-.206-1.314-1.11-2.218-.869-.87-2.505-1.776-5.557-1.776-3.053 0-4.688.906-5.557 1.776-.904.904-1.107 1.89-1.11 2.218h13.334z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <svg
            class="emotion-3"
            color="currentColor"
            height="18px"
            viewBox="0 0 16 16"
            width="18px"
          >
            <title>
              PersonIcon
            </title>
            <path
              d="M8 8a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm2.667-4a2.667 2.667 0 1 1-5.334 0 2.667 2.667 0 0 1 5.334 0zM16 14.667C16 16 14.667 16 14.667 16H1.333S0 16 0 14.667c0-1.334 1.333-5.334 8-5.334s8 4 8 5.334zm-1.333-.006c-.002-.328-.206-1.314-1.11-2.218-.869-.87-2.505-1.776-5.557-1.776-3.053 0-4.688.906-5.557 1.776-.904.904-1.107 1.89-1.11 2.218h13.334z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-9"
      >
        <div
          class="emotion-10"
        >
          <svg
            class="emotion-3"
            color="currentColor"
            height="28px"
            viewBox="0 0 16 16"
            width="28px"
          >
            <title>
              PersonIcon
            </title>
            <path
              d="M8 8a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm2.667-4a2.667 2.667 0 1 1-5.334 0 2.667 2.667 0 0 1 5.334 0zM16 14.667C16 16 14.667 16 14.667 16H1.333S0 16 0 14.667c0-1.334 1.333-5.334 8-5.334s8 4 8 5.334zm-1.333-.006c-.002-.328-.206-1.314-1.11-2.218-.869-.87-2.505-1.776-5.557-1.776-3.053 0-4.688.906-5.557 1.776-.904.904-1.107 1.89-1.11 2.218h13.334z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
